# qtstu

./: .clang-format  .gitignore  CMakeLists.txt
src/: CMakeLists.txt
src/hello/: CMakeLists.txt  main.cpp  main_window.cpp  main_window.h
src/tetrix/: CMakeLists.txt  MainWindow.h  main.cpp  main_window.h  piece.h  point.h
src/widget/: CMakeLists.txt  main.cpp  widget.cpp  widget.h
test/: CMakeLists.txt  main.cpp
